# parallel-lang

./: .gitignore  BLOCKS.md  CMakeLists.txt  DESIGN.md
.github/workflows/: ci.yml
benchmark/: main.cpp
benchmark/benchmarks/arithmetic/: additionLargeNumbers.p  additionSmallNumbers.p  divisionByZero.p  divisionLargeNumbers.p  divisionSmallNumbers.p  multiplicationLargeNumbers.p  multiplicationSmallNumbers.p  subtractionLargerNumbers.p  subtractionSmallNumbers.p
examples/: test.out  test.p
src/: cli.cpp  cli.hpp  cliUtils.hpp  command.cpp  command.hpp  concurrentQueue.hpp  exitCode.hpp  instruction.cpp  instruction.hpp  logging.hpp  logging.tpp  main.cpp  scope.hpp  utils.cpp  utils.hpp  value.cpp  value.hpp
src/compiler/: astBuilder.cpp  astBuilder.hpp  compiler.cpp  compiler.hpp  deferredFunctionLinking.hpp  expression.cpp  expression.hpp  graphLinker.cpp  graphLinker.hpp  resource.cpp  resource.hpp  syntaxError.cpp  syntaxError.hpp  token.hpp  tokenizer.cpp  tokenizer.hpp
src/interpreter/: bytecodeParser.cpp  bytecodeParser.hpp  executor.cpp  executor.hpp  function.cpp  function.hpp  interpeter.cpp  interpreter.cpp  interpreter.hpp  line.hpp  scope.cpp  scope.hpp  subprogram.cpp  subprogram.hpp
tests/: cli.cpp  concurrentQueue.cpp  logging.cpp  scope.cpp  test.cpp  testUtils.cpp  testUtils.hpp  utils.cpp
tests/compiler/: astBuilder.cpp  compiler.cpp  deferredFunctionLinking.cpp  expression.cpp  graphLinker.cpp  tokenizer.cpp
tests/e2e/: e2e.cpp  tests.cpp  tests.hpp
tests/interpreter/: bytecodeParser.cpp  executor.cpp  scope.cpp
(+47 files in other folders)
